<resources>
    <string name="app_name">Moneytrack</string>


    <!--Login Activity -->
    <string name="activity_login_register_prompt">I don\'t have an account</string>
    <string name="activity_login_Login_Button_Text">Login</string>
    <string name="activity_login_retrieve_credentials">I forgot my username and password</string>
    <string name="activity_login_remember_me">Remember me</string>
    <string name="activity_login_password_hint">password</string>
    <string name="activity_login_username_hint">username</string>
    <string name="activity_login_Logo">Moneytrack</string>
    <string name="activity_login_username_error">You have entered a wrong username.</string>
    <string name="activity_login_password_error">You have entered a wrong password.</string>
    <string name="activity_login_no_internet_error">Login has failed. No available internet connection.</string>
    <string name="activity_login_server_unreachable_error">Login has failed. Server is not responding.</string>


    <!--Register Activity -->
    <string name="activity_register_Logo">Moneytrack</string>
    <string name="activity_register_password_hint">password</string>
    <string name="activity_register_username_hint">username</string>
    <string name="activity_register_email_hint">e-mail</string>
    <string name="activity_register_signUp_button">Sign Up</string>
    <string name="activity_register_user_error">This username is taken.</string>
    <string name="activity_register_email_error">This e-mail is taken.</string>
    <string name="activity_register_no_error">Registration completed.</string>
    <string name="activity_register_no_internet_error">Registration has failed. No available internet connection.</string>
    <string name="activity_register_server_unreachable_error">Registration has failed. Server is not responding.</string>

    <!--Retrieve Activity -->
    <string name="activity_retrieve_Logo">Moneytrack</string>
    <string name="activity_retrieve_instructions_label">Enter your account\'s e-mail address and an e-mail will be sent containing your password.</string>
    <string name="activity_retrieve_email_box">e-mail</string>
    <string name="activity_retrieve_retrieve_button">Retrieve</string>
    <string name="activity_retrieve_confirmation">An e-mail containing your credentials has been sent to </string>
    <string name="activity_retrieve_no_internet_error">No available internet connection</string>

    <!--Ledger Activity -->
    <string name="activity_ledger_Logo">Moneytrack</string>
    <string name="activity_ledger_Logo_description">The application\'s logo</string>


    <!--Toolbar Menu -->
    <string name="toolbar_menu_calendar_item_title">Calendar</string>
    <string name="toolbar_menu_calendar_item_description">Pick another date</string>
    <string name="toolbar_menu_search_item_title">Search</string>
    <string name="toolbar_menu_search_item_description">Search for entries</string>
    <string name="toolbar_menu_settings_item_title">Settings</string>
    <string name="toolbar_menu_settings_item_description">Change the application\'s settings</string>
    <string name="toolbar_menu_logout_item_title">Logout</string>
    <string name="toolbar_menu_logout_item_description">Logout</string>
    <string name="toolbar_menu_ledger_item_title">Ledger</string>
    <string name="toolbar_menu_ledger_item_description">See a report of your finances</string>

    <!--Entry Dialog-->
    <string name="dialog_entry_amount_hint">amount</string>
    <string name="dialog_entry_description_hint">description</string>
    <string name="dialog_entry_update_button">Update</string>
    <string name="dialog_entry_cancel_button">Cancel</string>
    <string name="dialog_entry_save_button">Save</string>

    <!--Report Dialog-->
    <string name="dialog_report_lifetimeSum">Lifetime</string>

    <!--Search Dialog-->
    <string name="dialog_search_type">Type</string>
    <string name="dialog_search_category">Category</string>
    <string name="dialog_search_description">Description</string>
    <string name="dialog_search_description_hint"> </string>
    <string name="dialog_search_from">From</string>
    <string name="dialog_search_until">Until</string>
    <string name="dialog_search_search">Search</string>

    <!--Months-->
    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>

    <!--Date Buttons-->
    <string name="previousDateButton">&#60;</string>
    <string name="nextDateButton">&#62;</string>
</resources>