<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RetrieveActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_retrieve_logoBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="65dp"
            android:gravity="center"
            android:text="@string/activity_retrieve_Logo"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_green_light"
            android:textSize="36sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/activity_retrieve_instructions_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:text="@string/activity_retrieve_instructions_label"
            android:textColor="@color/dark_oily_green"
            android:textColorHint="@color/light_oily_green" />

        <EditText
            android:id="@+id/activity_retrieve_email_box"
            android:layout_marginTop="100dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/activity_retrieve_email_box"
            android:autofillHints="email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/dark_oily_green"
            android:textColorHint="@color/light_oily_green" />

        <Button
            android:id="@+id/activity_retrieve_retrieve_button"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_retrieve_retrieve_button"
            android:textColor="@color/dark_oily_green" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>