<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_register_logoBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="65dp"
            android:gravity="center"
            android:text="@string/activity_register_Logo"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_green_light"
            android:textSize="36sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/activity_register_username_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/activity_register_username_hint"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/dark_oily_green"
            android:autofillHints="username"
            android:textColorHint="@color/light_oily_green" />

        <EditText
            android:id="@+id/activity_register_password_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/activity_register_password_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/dark_oily_green"
            android:autofillHints="no"
            android:textColorHint="@color/light_oily_green" />

        <EditText
            android:id="@+id/activity_register_password_re_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/activity_register_password_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/dark_oily_green"
            android:autofillHints="no"
            android:textColorHint="@color/light_oily_green" />

        <EditText
            android:id="@+id/activity_register_email_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/activity_register_email_hint"
            android:inputType="textEmailAddress"

            android:textAlignment="center"
            android:textColor="@color/dark_oily_green"
            android:autofillHints="e-mail"
            android:textColorHint="@color/light_oily_green" />

        <Button
            android:id="@+id/activity_register_signUp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/activity_register_signUp_button"
            android:textAlignment="center"
            android:textColor="@color/dark_oily_green"
            android:textSize="20sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>