<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LedgerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_ledger_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_ledger_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:menu="@menu/activity_ledger_toolbar_menu"
            app:title="@string/activity_ledger_Logo" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/activity_ledger_dateToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toTopOf="@id/activity_ledger_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/activity_ledger_toolbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/activity_ledger_dateToolbar_previousButton"
            style="@style/dateButton"
            android:textSize="30sp"
            android:textColor="@color/dark_cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:onClick="onClickPreviousButton"
            android:text="@string/previousDateButton"
            />

        <TextView
            android:id="@+id/activity_ledger_dateToolbar_dateBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/light_oily_green"
            tools:text="23 September 2020"/>

        <Button
            android:id="@+id/activity_ledger_dateToolbar_nextButton"
            style="@style/dateButton"
            android:textSize="30sp"
            android:textColor="@color/dark_cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:onClick="onClickNextButton"
            android:text="@string/nextDateButton"
            android:elevation="0dp"
            android:shadowColor="@color/transparent"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_ledger_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_ledger_dateToolbar"
        tools:listitem="@layout/activity_ledger_row_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        style="@style/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@drawable/ic_add"
        android:onClick="onClickFloatingActionButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>